--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -1,3 +1,7 @@
+<script src="bower_components/EaselJS/lib/easeljs-0.8.2.min.js"></script>
+<script src="bower_components/color-thief/dist/color-thief.min.js"></script>
+<!--<script src="bower_components/fullcalendar/dist/fullcalendar.js"></script>-->
+
 <div ng-controller="FileViewController as fileView">
 	<div id="header">
 		<div class="row">
@@ -65,9 +69,9 @@
 
 									<div class="session" ng-class="{collapsed: activity.isComment}">
 										<!--<img class="icn" ng-src="{{agent.iconUrl}}" width="24" height="24">-->
-										
+
 										<label>{{'FILEVIEW.EDITING_SESSION' | translate}}</label>
-										
+
 										<!--<label class="time pull-right small">{{activity.totalTime | amDateFormat:'h[h] m[m]'}}</label>-->
 									</div>
 								</div>
@@ -78,15 +82,15 @@
 											<div ng-switch-when="http://w3id.org/art/terms/1.0/Comment">
 												<a class="comment" ng-click="previewInfluence(influence)">
 													<div>
-														<div class="avatar"><img ng-src="{{user.photoUrl}}"/></div>
+														<div class="avatar"><img ng-src="{{user.photoUrl}}" /></div>
 														<div class="txt">{{influence.comment}}</div>
 														<span class="tip tip-right"></span>
 													</div>
 
 													<label class="time pull-right small">{{getFormattedTime(influence.time)}}</label>
 												</a>
-                                                
-                                                <div class="clearfix"></div>
+
+												<div class="clearfix"></div>
 											</div>
 											<div ng-switch-default>
 												<a class="default" ng-click="previewInfluence(influence)">
@@ -110,7 +114,7 @@
 			</div>
 
 			<div class="ui-resizable ui-pane ui-pane-center">
-				<canvas id="canvas" class="ui-ui-pane ui-layout-center"></canvas>
+				<canvas id="canvas" class="ui-ui-pane ui-layout-center" width="640" height="480"></canvas>
 			</div>
 
 			<div class="ui-resizable ui-pane ui-pane-right">
@@ -226,7 +230,7 @@
 
 	<script>
 		$(function () {
-			$(document).ready(function () {
+			$(document).ready(function () {				
 				updateCanvas();
 
 				$(".ctl-history").focus();
