Bugfix: Do not replace dashes in resource file names in Nancy bootstrapper. Implemented pan and zoom in Artivity Journal.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -114,7 +114,7 @@
 			</div>
 
 			<div class="ui-resizable ui-pane ui-pane-center">
-				<canvas id="canvas" class="ui-ui-pane ui-layout-center" width="640" height="480" style="border: 1px solid blue;"></canvas>
+				<canvas id="canvas" class="ui-ui-pane ui-layout-center" width="640" height="480"></canvas>
 			</div>
 
 			<div class="ui-resizable ui-pane ui-pane-right">
