--- a/Artivity.Apid.Modules.Journal/app/partials/query.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/query.html
@@ -13,17 +13,17 @@
 
 	<div id="body">
 		<form target="{{endpoint}}" method="post">
-			<div class="row">
-				<div class="col-xs-6">
-					<textarea ng-model="queryString" contenteditable="true" style="margin: 20px 10px; padding: 10px; background: white; color: black; width: 100%; height: 750px; font-family: monospace;"></textarea>
-					
-					<button ng-click="executeQuery()" class="btn" style="margin: 10px;">Execute</button>
-					<button ng-click="resetQuery()" class="btn" style="margin: 10px;">Reset</button>
-				</div>
-				<div class="col-xs-6">
-					<pre style="margin: 20px 10px; height: 750px; overflow-y: scroll;"><div id="result"></div></pre>
-				</div>
-			</div>
+			<textarea id="editor"></textarea>
 		</form>
 	</div>
+
+	<script type="text/javascript">
+		$(document).ready(function () {
+			var editor = document.getElementById("editor");
+
+			console.log(editor);
+
+			//var yasgui = YASGUI(editor);
+		});
+	</script>
 </div>
