Added missing files.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -6,7 +6,7 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
-				<a class="btn btn-header" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
+                <a class="btn btn-header" href="#/files"><i class="zmdi zmdi-chevron-left"></i></a>
 			</div>
 			<div class="col">
 				<div class="icn" style="width: 32px; height: 32px; margin-top: 10px; margin-left: 5px;">
