--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -2,7 +2,7 @@
     <script type="text/ng-template" id="addAccountDialog.html">
         <div style="background: #222">
             <div class="modal-header">
-                <button class="btn btn-default btn-header pull-right" type="button" ng-click="cancel()"><i class="zmdi zmdi-hc-fw"></i></button>
+                <button class="btn btn-default btn-header pull-right" type="button" ng-click="cancel()"><i class="zmdi zmdi-chevron-left"></i></button>
 
                 <h4 class="modal-title">Choose Account Provider</h4>
             </div>
